--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@ header,.likeheaer,.blockGoToAb {
 }
 
 .blockGoToAb {
-    background: #FFE377;
+    background: #ffe500;
 
     box-shadow: 0px 4px 4px 0px #00000040;
-    padding: 10px 13px;
+    padding: 20px 13px;
     text-align: center;
     border-radius: inherit;
     box-shadow: 0px 4px 4px 0px #00000040;
@@ -325,7 +325,7 @@ text-align: left;
     width: 46%;
     padding: 25px 40px 0 40px;
     margin-top: 35px;
-    background: #F9C04AB8;
+    background: linear-gradient(180deg, #ffd15c 0%, rgba(255, 229, 0, 0.68) 100%);
     height: fit-content;
     min-height: 300px;
     border-radius: 32px;
